sugarcrm/styleguide/less/clients/sugarone/sugarone-specific/misc.less
/* Misc
-------------------------------------------------- */

.headerpane {
    background: none;
    border: none;
}

.label-module-mini {
    line-height: 16px;
}

ul.list {
    list-style: none;
    border-top: 2px solid @grayLighter;
    padding: 0;
    margin: 0 0 10px;
    li {
        list-style: none;
        border-top: 1px solid @grayLighter;
        margin: 0;
        padding: 10px;
        position: relative;
        img.avatar {
            position: absolute;
            top: 10px;
            left: 10px;
        }
        .description {
            margin-left: 42px;
            margin-right: 70px;
        }
        .reason {
            margin-left: 42px;
            font-size: @fontSizeSmall;
            color: @grayLight;
        }
        img {
            margin: 0 10px 0 0;
        }
    }
}
.actionNumber {
    font-weight: normal; 
    font-size: @fontSizeLarge + 4;
}
.actionNumber .label {
    font-size: @fontSizeLarge + 4 !important;
    line-height: @fontSizeLarge + 6 !important;
    margin-bottom: 10px;
}
.subActionNumber {
    font-size: @fontSizeSmall; 
    color: @gray;
}

.filters {
    margin: 0 10px;
}
.top .dropdown {margin-right: 5px;}
.dash h4 {
    font-size: @fontSizeLarge;
    font-weight: normal;
}
.dash .btn-toolbar.pull-right {
    margin-top: 5px;
}
.timeaway, .display-cafes, .display-directions {
    padding: 10px 0 10px 10px;
}

.main-pane .vcard2 {
  z-index: 0;
  position: relative;
}

.acomment .avatar {
  margin-right: 10px;
}

.more, .less {
    border: none !important;
  &.padded {
    padding: 8px 20px;
    display: inline-block;
  }
  //color: @linkMore;
  &:hover {
    .box-shadow(none);
    color: @linkMore;
    text-decoration: none;
  }
  [class^="icon-"] {
    display: inline-block;
    width: 1.25em;
    text-align: center;
  }
  &:hover [class^="icon-"] {
    text-decoration: none;
  }
}

//from nutmeg. to be removed??
.content {
  //padding-left: 72px;
  //position: relative;
}
.content.span12 {
  //padding-right: 20px;
}
.content .btn-toolbar {
  //breaks styleguide
  //margin: 0 -20px 8px !important;
  //margin: 0 0 8px!important;
}
.content .vcard2 {
  //z-index: 0;
  //position: relative;
}

.drag:hover {
  cursor: move;
}

.dblclick input {
  padding: 8px;
  position: absolute;
  top: -4px;
  left: -4px;
  width: 80% !important;
  margin: 0;
  border: none;
}

img.pull-right {
  margin: 0 0 8px 8px;
}
img.pull-left {
  margin: 0 8px 8px 0;
}

.ui-sortable-helper {
  .opacity(30);
}
.ui-sortable .ui-sortable-placeholder:first-child {
  margin:0;
}
.ui-sortable .ui-sortable-placeholder {
  visibility: visible !important;
  height: 320px !important;
  background: @grayLighter;
  @shadow: inset 0 3px 5px rgba(0,0,0,.1), inset 2px 2px 0 rgba(0,0,0,.05), inset -2px -2px 0 rgba(0,0,0,.05);
  .box-shadow(@shadow);
}
.ui-sortable-placeholder * {visibility: hidden;
}

.ui-draggable-dragging {
  @shadow: 0 2px 10px rgba(0,0,0,.1), 0 0 10px rgba(0,0,0,.4), -1px -1px 20px rgba(0,0,0,.1), 1px 1px 20px rgba(0,0,0,.1);
  //@shadow: 0 2px 1px rgba(0,0,0,.1), 0 0 1px rgba(0,0,0,.4), -1px -1px 2px rgba(0,0,0,.1), 1px 1px 2px rgba(0,0,0,.1);
  .box-shadow(@shadow);
}

.titlebar {
  .buttonBackground(@white, @grayLight);
  .border-radius(3px 3px 0 0);
}

.block .tab-content {
  margin-top: -18px;
  padding: 10px;
  background: @white;
  border: 1px solid @grayLight;
  border-top: none;
  @shadow: 0 1px 3px rgba(0,0,0,.1);
  .box-shadow(@shadow);
}

.browser-support {
  max-width: 100%;
}

/* Make tables spaced out a bit more */
h2 + table,
h3 + table,
h4 + table,
h2 + .row {
  margin-top: 5px;
}


/* Remove bottom margin on example forms in wells */
form.well {
  padding: 14px;
}

/* Tighten up spacing */
.well hr {
  margin: 18px 0;
}

/* Fake the :focus state to demo it */
.focused {
  border-color: rgba(82,168,236,.8);
  -webkit-box-shadow: inset 0 1px 3px rgba(0,0,0,.1), 0 0 8px rgba(82,168,236,.6);
     -moz-box-shadow: inset 0 1px 3px rgba(0,0,0,.1), 0 0 8px rgba(82,168,236,.6);
          box-shadow: inset 0 1px 3px rgba(0,0,0,.1), 0 0 8px rgba(82,168,236,.6);
  outline: 0;
}

/* For input sizes, make them display block */
.docs-input-sizes select,
.docs-input-sizes input[type=text] {
  display: block;
  margin-bottom: 9px;
}
.width-auto {
  width: auto;
}

.news-article, .meetingEvent {
  padding: 10px;
  border-bottom: 1px solid @grayLighter;
  h5 {
    padding: 0;
    margin: 0;
  }
}

/* Faded out hr */
hr.soften {
  height: 1px;
  margin: 54px 0;
  background-image: -webkit-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,.1), rgba(0,0,0,0));
  background-image:    -moz-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,.1), rgba(0,0,0,0));
  background-image:     -ms-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,.1), rgba(0,0,0,0));
  background-image:      -o-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,.1), rgba(0,0,0,0));
  border: 0;
}

.padded {
  padding: 20px;
}

.filter_init.duplicates {
  background: darken(@grayLighter, 5%);
  article#search_option_.filter-body {
    padding:10px 10px 0 10px;
    &>div {
      margin: 0;
    }
    &.new {
      .removeme {
        display:none;
      }
    }
  }
}

.record-cell[data-name="title"], .record-cell[data-name="account_name"]  {
    font-size: 12px !important;
}

.record-cell[data-name="date_modified_by"] {
    position: absolute !important;
    right: 0;
    bottom: -28px;
    text-align: right;
}    
.record .record-cell[data-name="date_modified_by"][data-type="date"] .normal > span,  .record .record-cell[data-name="date_modified_by"][data-type="datetimecombo"] .normal > span,  .record .record-cell[data-name="date_modified_by"][data-type="fieldset"] .normal > span,  .record .record-cell[data-name="date_modified_by"] .record-label {
        display: inline !important;
    }
    .record .record-cell[data-name="date_modified_by"] .normal {
        font-size: @fontSizeSmall;
        color: @grayLight;
        display: inline !important;
    }
/* ... */

